<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/android_sma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFE5DA"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:scaleType="fitEnd"
            android:layout_width="116dp"
            android:layout_height="122dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/android_sma"
            android:layout_marginLeft="299dp"
            android:layout_marginTop="609dp"
            android:clipToOutline="true"
            app:srcCompat="@drawable/kiwi"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="153dp"
            app:srcCompat="@drawable/lettuce" />

        <RelativeLayout
            android:id="@+id/rectangle_4"
            android:layout_width="369dp"
            android:layout_height="652dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rectangle_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/input1title"
                android:layout_width="283dp"
                android:layout_height="101dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="42dp"
                android:gravity="top"
                android:text="@string/show2title"
                android:textAppearance="@style/input1title" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:src="@drawable/common_google_signin_btn_icon_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/x"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/x" />

            <TextView
                android:id="@+id/foodis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="210dp"
                android:gravity="top"
                android:text="@string/foodis"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/foodis2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="210dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="180dp"
                android:gravity="top"
                android:text="@string/calorieis"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/calorie2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="90dp"
                android:layout_marginBottom="180dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/foodplaceis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="150dp"
                android:gravity="top"
                android:text="@string/foodplaceis"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/foodplaceis2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="110dp"
                android:layout_marginBottom="150dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/foodname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="120dp"
                android:gravity="top"
                android:text="@string/foodname"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/foodname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="140dp"
                android:layout_marginBottom="120dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="90dp"
                android:gravity="top"
                android:text="@string/date"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="90dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="60dp"
                android:gravity="top"
                android:text="@string/price"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="60dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />

            <TextView
                android:id="@+id/foodreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="30dp"
                android:gravity="top"
                android:text="@string/foodreview"
                android:textAppearance="@style/foodis" />

            <TextView
                android:id="@+id/foodreview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="180dp"
                android:layout_marginBottom="30dp"
                android:gravity="top"
                android:text=""
                android:textAppearance="@style/foodis2" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>