<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/android_sma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFE5DA"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/rectangle_1"
            android:layout_width="221dp"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:background="@drawable/rectangle_1" >

            <View
                android:id="@+id/line_1"
                android:layout_width="190dp"
                android:layout_height="3dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/line_1" />

            <View
                android:id="@+id/line_"
                android:layout_width="190dp"
                android:layout_height="3dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="160dp"
                android:background="@drawable/line_1" />

            <TextView
                android:id="@+id/some_id"
                android:layout_width="136dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:gravity="top"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/some_id2"
                android:layout_width="136dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="110dp"
                android:gravity="top"
                android:text="@string/some_id2"
                android:textAppearance="@style/some_id"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/some_id3"
                android:layout_width="136dp"
                android:layout_height="26dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="190dp"
                android:gravity="top"
                android:text="@string/some_id3"
                android:textAppearance="@style/some_id"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:clipToOutline="true"
                app:srcCompat="@drawable/write" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="110dp"
                android:clipToOutline="true"
                app:srcCompat="@drawable/eye" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="33dp"
                android:layout_height="31dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="190dp"
                android:clipToOutline="true"
                app:srcCompat="@drawable/glasses" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />



        <TextView
            android:id="@+id/meal_tracke"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:gravity="center_horizontal|top"
            android:text="@string/meal_tracke"
            android:textAppearance="@style/meal_tracke"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="217dp"
            android:gravity="top"
            android:text="@string/welcome"
            android:textAppearance="@style/welcome"
            tools:ignore="MissingConstraints" />



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="249dp"
            android:clipToOutline="true"
            app:srcCompat="@drawable/avocado" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="250dp"
            android:layout_height="251dp"
            android:scaleType="fitEnd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/android_sma"
            android:layout_marginLeft="299dp"
            android:layout_marginTop="609dp"
            android:clipToOutline="true"
            app:srcCompat="@drawable/kiwi"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="153dp"
            app:srcCompat="@drawable/lettuce" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="29dp"
            app:srcCompat="@drawable/dongguklogo" />

        <TextView
            android:id="@+id/dongguk"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_marginRight="7dp"
            android:gravity="center_horizontal|top"
            android:text="@string/dongguk"
            android:textAppearance="@style/dongguk"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>